# Face_ID

./: .gitignore  CMakeLists.txt  README.md  coletor.cpp  main.cpp  treinamento.cpp  vcpkg.json
